	  unless they have a .version file then assume the directory is
	  a genuine modulefiles directory.
	* Expand '$$' to the current process id when performing one
	  level of variable expansion for the MODULESBEGINENV env.var
	* Fixed up the automake/autoconf scripts to create a workable
	  distribution tarball
	* Fixed the configuration behavior if --exec-prefix is given
	* Updated the config/tcl.m4 (used by configure)
	* Eliminated any warnings caused by using Tcl 8.4
	* Fixed any mixed size differences when using ints and pointers.
	  (Only an issue with 64 bit machines.)

	Contributor:
	 	Andrew Ruder  		<aer@absoft.com>
	* cmdConflict.c: Fixed memory allocation bug in cmdPrereq().
	  When there is more than 1 argument to the prereq command, both
	  savedlens and savedlists were indexed past what the initial malloc
	  allowed.
	* ModuleCmd_Refresh.c: Like "update" but refreshes only the
	  non-persistent attributes of the currently loaded modules,
	  regardless of the state of the loaded modules (i.e. refresh
	  aliases).

	Contributor:
	 	Mark Lakata  		<lakata@mips.com>
	* removed configure *.in files from testsuite and added envvars to
	  allow running the testsuite from another directory
	* other fixes to testsuite
	* allowed one argument for 'switch', i.e. "module switch foo/1.3"
	  is the same as "module switch foo foo/1.3"
	* bug fix in cmdXResources regarding parsing the XRDB
	* removed probetcl from distribution; function moved to aclocal.m4
	* special shell chars in env vars are escaped rather than
	  quoted. This allows the use of single quotes inside the env var
	* noglob option turned on for module command in csh/tcsh
	* use customed temp file routine, rather than tmpnam or tempnam
	* minor bugs
	
****************************   Release 3.1 ******************************
Modules 3.1.6
Thu Jan  3 20:56:16 PST 2002		R.K. Owen (rk@owen.sj.ca.us)
	Contributors:
		Scott Gaskins		<sgaskins@us.ibm.com>
	 	Leo Butler		<lbutler@brocade.com>)