@@ -51,6 +51,7 @@ Modules 3.2.0
 	* Fixed up the automake/autoconf scripts to create a workable
 	  distribution tarball
 	* Fixed the configuration behavior if --exec-prefix is given
+	  Also put the init/ scripts under the --exec-prefix.
 	* Updated the config/tcl.m4 (used by configure)
 	* Eliminated any warnings caused by using Tcl 8.4
 	* Fixed any mixed size differences when using ints and pointers.
